--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,14 @@ html{
 
 body div{
   font-family: 'Marianne', sans-serif;
+  color: #1E1E1E;
 }
-a:hover{
+a{
+  text-decoration:none !important;
+  &:hover{
   cursor:pointer;
   text-decoration:none;
+  }
 }
 .logo_header{
   width:100%;
@@ -51,19 +55,22 @@ a:hover{
   border-bottom:2px solid blue;
 }
 .nav_link a{
-  color:rgba(30, 30, 30, 1);
+  color:#1E1E1E;
   font-size:14px;
-
+  &:hover{
+  color:#1E1E1E;
+  }
 }
 .footer{
   width:100%;
-  max-width:1400px;
-  margin:auto;
+  
   padding-left:20px;
   padding-right:20px;
-
+  border-top:1px solid rgba(0, 0, 145, 1);
 }
 .footer_top{
+  max-width:1400px;
+  margin:auto;
   display:inline-flex;
   width:100%;
   align-items:center;
@@ -82,7 +89,8 @@ a:hover{
 }
 .footer_bottom{
   width:100%;
-  border-top:1px solid #CECECE;
+  max-width:1400px;
+  margin:auto;
   padding: 20px 0px;
 }
 .footer_bottom  a{
@@ -101,4 +109,182 @@ a:hover{
   color:#383838;
   font-weight:bold;
    margin-right:15px;
+}
+.map{
+  height:400px;
+  width:50%;
+}
+
+.map_component, .indicateurs_component{
+  display: inline-flex;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flex;
+  display: -moz-inline-flex;
+  padding:24px;
+  width:100%;
+  
+}
+.indicateurs_search_box, .indicateurs_infos_box{
+  width:25% !important;
+}
+.indicateurs_chart_box{
+  width:50%;
+}
+.map_component > div{
+  width:50%;
+}
+.map_box{
+  width:25% !important;
+}
+.box{
+padding:24px;
+border-radius:4px;
+border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+.form {
+  input, textarea {
+  width:100%;
+  background-color:#F8F8F8;
+  border-radius:4px;
+  border:none;
+  color:#1E1E1E;
+  font-size:15px;
+  padding:5px 8px;
+  appearance: none;
+    -ms-appearance: none;
+    -moz-appearance: none; /* Firefox */
+    -webkit-appearance: none; /* Safari and Chrome */
+  outline:none;
+  &:focus{
+    border-bottom:1px solid #000091;
+  }
+  }
+}
+.bouton{
+text-decoration:none;
+  background-color:#000091;
+  color:#fff;
+  font-size:16px;      
+  font-weight:500;
+  padding:10px 15px;
+  cursor: pointer;
+  border:none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  &:hover{
+  color:#fff;
+  }
+}
+.d24{
+  height:24px;
+}
+.d12{
+  height:12px;
+}
+.box_etiquette{
+  background-color:#F0F0F0;
+  border-radius:8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding:12px;
+}
+.titre_etiquette{
+  font-size:15px;
+  font-weight:bold;
+}
+.texte_etiquette{
+  font-size:13px;
+}
+.table{
+  overflow-x:auto;
+  margin-top:10px;
+  margin-bottom:50px;
+  max-height: 300px;
+  overflow: auto;
+  width:100%;
+  display:inline-block;
+  table{
+    width:100%;
+     
+    thead{
+      tr{
+        margin-bottom: 40px;
+        th{
+          padding:20px 4px;
+          text-align:center;
+          color:#1E1E1E;
+          font-size:15px;
+          position: sticky; 
+      top: 0;
+          background-color:#fff;
+          a{
+            color:#000091;
+          }
+          span{
+            text-align:right;
+          }
+        } 
+        .border-none{
+            border-right:none;
+          }
+      }
+    }
+    tbody{
+      tr{
+        th{
+     
+          line-height:24px;
+          height:32px;
+          text-align:center;
+          color:#1E1E1E;
+          font-size:14px;
+           a{
+            color:#1E1E1E;
+            margin:0 5px;
+             text-decoration:underline;
+          }
+        } 
+        td{
+
+          line-height:24px;
+          height:32px;
+          text-align:center;
+          color:#1E1E1E;
+          font-size:15px;
+          a{
+            color: rgba(0,74,112,0.4);
+            text-decoration:none;
+            margin:0 5px;
+          }
+          span{
+            color: #000091; 
+          }
+         
+        }
+         .border-none{
+            border-right:none;
+          }
+      }  
+    }
+    
+  }
+}
+
+.box_classique{
+  background-color:#fff;
+  border-radius:24px;
+  padding:12px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
