--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@ a{
   text-decoration:none;
   }
 }
+button, button:focus{
+  outline:none !important;
+  box-shadow:none;
+}
 .logo_header{
   width:100%;
   padding:12px;
@@ -202,6 +206,39 @@ text-decoration:none;
   &:hover{
   color:#fff;
   }
+}
+.dropdown_btn{
+    color:#1E1E1E !important;
+    outline:none !important;
+    appearance: none !important;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    border: 1px solid rgba(0,0,0,0.1) !important;
+    border-radius:4px !important;
+    font-size:13px !important;
+    line-height:20px !important;
+    background-color:#fff !important;
+    padding:5px 10px !important;
+    margin:10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  &:focus{
+  outline:none !important;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2) !important;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+
+  }
+}
+.dropwdown_menu_btn{
+  padding:10px 20px !important;
+  width:100%;
+  max-height: 200px !important;
+  overflow:scroll !important;
+  scrollbar-width: none;
 }
 .d24{
   height:24px;
