update page indicateurs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,63 @@ button, button:focus{
   outline:none !important;
   box-shadow:none;
 }
+input[type="radio"] {
+ height: 1em; 
+ width: 1em; 
+ margin-bottom: -0.25em; 
+ margin-right: 5px; 
+ vertical-align: top;
+ border: 1px solid #000;
+ border-radius: 50%;
+ outline: none;
+ appearance: none;
+ -ms-appearance: none;
+ -moz-appearance: none; /* Firefox */
+ -webkit-appearance: none; /* Safari and Chrome */
+ }
+  
+input[type="radio"]:checked:before {
+  border: 1px solid #000091;
+  background: radial-gradient(#000091 50%, rgba(255, 0, 0, 0) 51%);
+ }
+
+input[type="radio"]:checked {
+  border: 1px solid #000091;
+  background: radial-gradient(#000091 50%, rgba(255, 0, 0, 0) 51%);
+}
+
+input[type="checkbox"]:focus, input[type="radio"]:focus {
+//box-shadow: 0 0 0 0.05em #fff, 0 0 0.15em 0.1em #000091;
+  outline:none;
+}
+input[type="checkbox"] {
+ height: 1em; 
+ width: 1em; 
+ //margin-bottom: -0.25em; 
+ margin-right: 5px; 
+ //vertical-align: top;
+ border: 1px solid #000;
+ border-radius: 2px;
+ outline: none;
+ appearance: none;
+ -ms-appearance: none;
+ -moz-appearance: none; /* Firefox */
+ -webkit-appearance: none; /* Safari and Chrome */
+ }
+input[type="checkbox"]:checked:before {
+  content: "\2713";
+
+ position: absolute;
+ font-size: 0.7em;
+ text-align: center;
+ width: 1.25em;
+ color: #fff;
+ }
+input[type="checkbox"]:checked {
+  background-color: #000091;
+  border: 1px solid #000091;
+  color: transparent;
+}
 .logo_header{
   width:100%;
   padding:12px;
@@ -214,7 +271,7 @@ button, button:focus{
   text-decoration:none;
   background-color:#000091;
   color:#fff;
-  font-size:16px;      
+  font-size:15px;      
   font-weight:500;
   padding:10px 15px;
   cursor: pointer;
@@ -254,11 +311,16 @@ button, button:focus{
   }
 }
 .dropwdown_menu_btn{
+  border-radius:4px !important;
+  min-width:150px !important;
   padding:10px 20px !important;
   width:100%;
   max-height: 200px !important;
   overflow:scroll !important;
   scrollbar-width: none;
+  label{
+  margin-bottom:10px;
+  }
 }
 .d24{
   height:24px;
@@ -295,7 +357,8 @@ button, button:focus{
      
     thead{
       tr{
-        margin-bottom: 40px;
+        margin-bottom: 30px;
+        border:none !important;
         th{
           padding:20px 4px;
           text-align:center;
@@ -318,6 +381,7 @@ button, button:focus{
     }
     tbody{
       tr{
+        border:none !important;
         th{
      
           line-height:24px;
@@ -378,4 +442,10 @@ button, button:focus{
   span{
   color:#000091;
   }
+}
+.dropdown{
+  display: inline-flex !important;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flex;
+  display: -moz-inline-flex;
 }
