--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -265,6 +265,9 @@ input[type="checkbox"]:checked {
   -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   padding:12px;
+  max-height:100px;
+  overflow:scroll;
+  background-color:#fff;
 }
 .search_bar::placeholder{
   font-weight:light;
@@ -438,12 +441,12 @@ input[type="checkbox"]:checked {
   fill: #fff !important;
 }
 .map_se{
-  width:25%;
+  width:33.3%;
   color:#1E1E1E;
   font-size:13px;
   font-weight:bold;
   span{
-  color:#000091;
+  color:#2323EA;
   }
 }
 .dropdown{
