add legend carte

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,10 +174,13 @@ input[type="checkbox"]:checked {
   font-weight:bold;
    margin-right:15px;
 }
-.map{
-  height:400px;
+.map_center{
   width:66.7%;
   padding:0 12px;
+}
+.map{
+  height:400px;
+  width:100%;
 }
 .align_flex{
   display: inline-flex;
@@ -454,4 +457,37 @@ input[type="checkbox"]:checked {
   display: -webkit-inline-flex;
   display: -ms-inline-flex;
   display: -moz-inline-flex;
+}
+.box_infor{
+  background-color: #23EADE;
+  border-radius: 50px;
+  padding: 4px 8px;
+  color:#000;
+  font-size:13px;
+  margin-right:5px;
+}
+.box_indv{
+  background-color: rgba(66, 186, 179, 0.2);
+  border-radius: 4px;
+  padding: 4px;
+  margin-right:5px;
+  margin-bottom:5px;
+  color:#42BAB3;
+  font-size:13px;
+}
+.cvert{
+  color:#42BAB3;
+}
+.crouge{
+  color: #FF3E14;
+}
+.cjaune{
+  color:#E8CF4E;
+}
+.map_legende{
+  color:#6A6A6A;
+  font-size:10px;
+  span{
+  margin-right:10px;
+  }
 }
