--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -552,8 +552,29 @@ input[type="checkbox"]:checked {
     }
 
 }
-.react-fetch-progress-bar {
-  backgroundColor: #F0F0F0 !important;
-  height: 10px;
-  border-radius:4px;
+.list_name{
+  text-align:left !important;
+}
+.loader_box{
+  min-height:400px;
+}
+.loader {
+  position: absolute;
+  top: calc(50% - 4em);
+  left: calc(50% - 4em);
+  width: 6em;
+  height: 6em;
+  border: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-left: 1.1em solid #000000;
+  border-radius: 50%;
+  animation: load8 1.1s infinite linear;
+}
+
+@keyframes load8 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
