update chargement page graphe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -331,6 +331,9 @@ input[type="checkbox"]:checked {
   margin-bottom:10px;
   }
 }
+.d32{
+  height:32px;
+}
 .d24{
   height:24px;
 }
@@ -494,6 +497,15 @@ input[type="checkbox"]:checked {
   margin:5px;
   display:inline-block;
 }
+.box_indn{
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  padding: 4px;
+  color:#000;
+  font-size:13px;
+  margin:5px;
+  display:inline-block;
+}
 .cvert{
   color:#42BAB3;
 }
@@ -502,6 +514,9 @@ input[type="checkbox"]:checked {
 }
 .cjaune{
   color:#E8CF4E;
+}
+.cnoir{
+  color:#000;
 }
 .map_legende{
   color:#6A6A6A;
