--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,7 @@ input[type="radio"]:checked:before {
 input[type="radio"]:checked {
   border: 1px solid #000091;
   background: radial-gradient(#000091 50%, rgba(255, 0, 0, 0) 51%);
+  position:relative;
 }
 
 input[type="checkbox"]:focus, input[type="radio"]:focus {
@@ -94,6 +95,7 @@ input[type="checkbox"]:checked {
   background-color: #000091;
   border: 1px solid #000091;
   color: transparent;
+  position:relative;
 }
 .logo_header{
   width:100%;
@@ -133,13 +135,11 @@ input[type="checkbox"]:checked {
 }
 .footer{
   width:100%;
-  
   padding-left:20px;
   padding-right:20px;
   border-top:1px solid rgba(0, 0, 145, 1);
 }
 .footer_top{
-  max-width:1400px;
   margin:auto;
   display:inline-flex;
   width:100%;
@@ -154,12 +154,14 @@ input[type="checkbox"]:checked {
 }
 
 .footer_text{
+width:50%;
+text-align:right;
   color:#383838;
   font-size:16px;
 }
 .footer_bottom{
   width:100%;
-  max-width:1400px;
+  //max-width:1400px;
   margin:auto;
   padding: 20px 0px;
 }
@@ -233,7 +235,7 @@ input[type="checkbox"]:checked {
   border-radius:4px;
   border:none;
   color:#1E1E1E;
-  font-size:15px;
+  font-size:13px;
   padding:5px 8px;
   appearance: none;
   -ms-appearance: none;
@@ -244,8 +246,36 @@ input[type="checkbox"]:checked {
     border-bottom:1px solid #000091;
   }
   }
+  label {
+  font-size:13px !important;
+  }
+}
+.form_checkbox {
+  input, textarea {
+  width:100%;
+  background-color:#fff;
+  border-radius:4px;
+  border:none;
+  color:#1E1E1E;
+  font-size:13px;
+  padding:5px 8px;
+  appearance: none;
+  -ms-appearance: none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
+  outline:none;
+  }
+  label {
+  font-size:13px !important;
+  font-family: 'Marianne', sans-serif;
+  }
+}
+.checkbox_li{
+  font-size:13px !important;
+  font-family: 'Marianne', sans-serif; 
 }
 .formw {
+line-height:36px;
   select{
     color:#1E1E1E;
     outline:none;
@@ -260,15 +290,31 @@ input[type="checkbox"]:checked {
     padding:5px 10px;
     margin:10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  }
+}
+.search_checkbox{
+  background-color:#fff !important;
+  border:1px solid rgba(0,0,0,0.1) !important;
+  border-radius:4px;
+  width: auto !important;
+  min-width:100%;
+  
+}
+.search_checkbox > div > div {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-  }
 }
 .search_bar{
   background-color:#fff !important;
-  border:1px solid rgba(0,0,0,0.1) !important;
+  border:1px solid rgba(0,0,0,0.1);
   border-bottom:2px solid #000091 !important;
+  width: auto !important;
+  min-width:100%;
 }
 .search_results{
   border:1px solid rgba(0,0,0,0.1);
@@ -282,6 +328,11 @@ input[type="checkbox"]:checked {
   background-color:#fff;
 }
 .search_bar::placeholder{
+  font-weight:light;
+  font-style: italic;
+}
+input::placeholder{
+  font-size:13px;
   font-weight:light;
   font-style: italic;
 }
@@ -490,6 +541,7 @@ input[type="checkbox"]:checked {
   font-size:13px;
   margin:5px;
   display:inline-block;
+  position:relative;
 }
 .box_indj{
   background-color: rgba(232, 207, 78, 0.2);
@@ -499,6 +551,7 @@ input[type="checkbox"]:checked {
   font-size:13px;
   margin:5px;
   display:inline-block;
+  position:relative;
 }
 .box_indr{
   background-color: rgba(255, 62, 20, 0.1);
@@ -508,6 +561,7 @@ input[type="checkbox"]:checked {
   font-size:13px;
   margin:5px;
   display:inline-block;
+  position:relative;
 }
 .box_indn{
   background-color: rgba(0, 0, 0, 0.1);
@@ -517,6 +571,7 @@ input[type="checkbox"]:checked {
   font-size:13px;
   margin:5px;
   display:inline-block;
+  position:relative;
 }
 .cvert{
   color:#42BAB3;
@@ -654,4 +709,19 @@ text-align:center;
 }
 .align_center{
   align-items:center;
+}
+.box_ind_hover{
+  position:absolute;
+  left:10px;
+  top:5px;
+  max-width:150px;
+  border-radius:4px;
+  background-color:rgba(255, 255, 255, 0.95);
+  color:#1E1E1E;
+  z-index:1;
+  padding:8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
