--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,7 +113,6 @@ input[type="checkbox"]:checked {
 }
 .nav_header{
   width:100%;
-  max-width:1400px;
   margin:auto;
   padding-left:20px;
   padding-right:20px;
@@ -724,4 +723,17 @@ text-align:center;
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+}
+.user_dropdown{
+  position:absolute !important;
+  right:24px !important;
+}
+.user_dropdown_button{
+  background-color:#000091 !important;
+  border:none !important;
+  outline:none !important;
+  appearance:none !important;
+  -ms-appearance: none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
 }
