--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -272,6 +272,7 @@ text-align:right;
 .checkbox_li{
   font-size:13px !important;
   font-family: 'Marianne', sans-serif; 
+  padding-left:10px;
 }
 .formw {
 line-height:36px;
@@ -736,4 +737,8 @@ text-align:center;
   -ms-appearance: none;
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
+  box-shadow:none !important;
+  &:focus, &:active{
+    box-shadow:none !important;
+  }
 }
